# bedrock-agent-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.github  Dockerfile.jira  Dockerfile.orchestrator  Dockerfile.planning  GITHUB_AGENT_MOCK_REMOVAL_PLAN.md  IMPLEMENTATION_SUMMARY.md  INVOCATION.md  MIGRATION_GUIDE.md  Makefile  PLANNING_AGENT_SIMPLIFICATION_PLAN.md  QUICK_REFERENCE.md  README.md  RUNTIME_STANDARDIZATION_PLAN.md  TECHNICAL_SPEC.md  TESTING.md  agentcore  deploy_agents.sh  invoke_github.sh  invoke_jira.sh  make_executable.sh  pyproject.toml  setup_and_deploy.sh  setup_github_provider.py  setup_jira_provider.py  task-management-api-plan.md  test_agents_local.sh
.claude/: CLAUDE.md
.claude/agents/: README.md  _base-tools.md  _improvements.md  docker-expert.md  python-refactor.md  strands-architect.md
.claude/agents-bk/: WORKFLOWS.md  agent-architect.md  coding-expert.md  import-debugger.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  deployment_workflow.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
agents/coding-agent/: .bedrock_agentcore.yaml  Dockerfile  README.md  pyproject.toml
agents/coding-agent/src/: __init__.py  __main__.py  agent.py  runtime.py
agents/coding-agent/src/common/: utils.py
agents/coding-agent/src/tools/: __init__.py  command_executor.py  file_operations.py  mcp_client.py  test_runner.py  workspace_manager.py
agents/github-agent/: .bedrock_agentcore.yaml  .env.example  .gitignore  Dockerfile  LOCAL_INVOCATION_GUIDE.md  LOCAL_TESTING_GUIDE.md  QUICKSTART.md  README_TESTING.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md  pyproject.toml  test_github_agent.py  test_invocation.py  test_local.py  test_protocol.py  test_quick.sh  test_with_aws.py  validate_architecture.py  validate_imports.py
agents/github-agent/claudedocs/: Strands-Native-Orchestration-Analysis.md
agents/github-agent/docs/: GitHub-Agent-Response-Format.md  OAuth-Testing-Guide.md  exp-refactoring-to-strands-patterns.md
agents/github-agent/scripts/: setup_github_provider.sh
agents/github-agent/src/: __init__.py  __main__.py  agent.py  runtime.py
agents/jira-agent/: .agentcore.json  .bedrock_agentcore.yaml  .env.example  .env.local  .gitignore  CHANGELOG.md  CLOUD_ID_IMPLEMENTATION.md  Dockerfile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  build_docker.sh  check_atlassian_oauth.sh  pyproject.toml  pytest.ini  retry_jira_setup.sh  setup_jira_provider.sh  test_docker.sh  test_jira_token.sh  test_quick.sh  validate_architecture.py  validate_imports.py
agents/jira-agent/docs/: exp-refactoring-to-strands-patterns.md
agents/jira-agent/src/: __init__.py  agent.py  runtime.py
agents/jira-agent/tests/: README.md  __init__.py  conftest.py  test_agent.py  test_auth_agentcore.py  test_auth_mock.py  test_tools_tickets.py  test_tools_updates.py
agents/orchestrator-agent/: .bedrock_agentcore.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  example_grab_youtube.py  iam-policy-agent-invocation.json  pyproject.toml  test_dual_mode_integration.py
agents/planning-agent/: .bedrock_agentcore.yaml  Dockerfile  pyproject.toml
agents/planning-agent/src/: __main__.py  agent.py  response_protocol.py  runtime.py
agents/planning-agent/src/common/: config.py  task_store.py  utils.py
agents/planning-agent/src/tools/: __init__.py  task_planner.py
archive/: README.md
archive/2024-10-completion-reports/: DEPLOYMENT_AND_CAPABILITIES_REPORT.md  DUAL_MODE_IMPLEMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_DEPLOYMENT_TEST_RESULTS.md  PROJECT_COMPLETE_REPORT.md
archive/refactoring-docs/: GitHub-Agent-Refactoring-Plan.md
charts/: 01-orchestrator-overview.md  02-dependency-check-workflow.md  03-feature-development-workflow.md  04-planning-agent-detail.md  05-github-agent-detail.md  06-jira-agent-detail.md  07-coding-agent-detail.md  08-usage-scenarios.md  09-system-architecture.md  README.md
docs/: AWS-AgentCore-Setup.md  Agent-Test-Prompts.md  AgentCore-CLI-Reference.md  All-Agents-Summary.md  Async-Task-Pattern.md  Coding-Agent-Implementation-Plan.md  Coding-Agent-Setup.md  Git-Agent-Implementation-Plan.md  Independent-Project-Structure-Best-Practices.md  JIRA-Agent-Implementation-Plan.md  JIRA-Agent-Setup.md  MAKEFILE_RATIONALE.md  MVP-Plan.md  Multi-Agent-Workflow.md  Orchestrator-Agent-Implementation-Plan.md  Orchestrator-Agent-Setup.md  Planning-Agent-Implementation-Plan.md  Progress-Streaming-Protocol.md  SESSION_CLEANUP_IMPLEMENTATION_SUMMARY.md  Session-Cleanup-Quick-Guide.md  Stability-Workflow-Design.md  Timeout-Handling.md  bedrock-agentcore-control-reference.md  bedrock-agentcore-runtime-reference.md  clean_json_functions.md  coding_agent_setup.md
docs/decisions/: 001-agent-communication-pattern.md
scripts/: README.md  configure_agents.sh  deploy_all.sh  deploy_orchestrator_with_arns.sh  fix_jira_oauth_permissions.sh  invoke_coding.sh  invoke_github.sh  invoke_jira.sh  invoke_orchestrator.sh  invoke_planning.sh  setup-aws-flexible.sh  setup-new-aws-account.sh  setup.sh  setup_orchestrator.sh  setup_shared_resources.sh  test_coding_local.py  test_github_local.py  test_jira_local.py  update-orchestrator-permissions.sh
src/: entrypoint.py
src/common/auth/: github.py  (+2 more)
tests/integration/: README.md  test_github_agent.sh
(+61 files in other folders)
