[project]
name = "multi-agent"
version = "0.1.0"
description = "Multi-agent platform with GitHub, Jira, Slack agents"
requires-python = ">=3.10"
dependencies = [
    "bedrock-agentcore[strands-agents]>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "strands-agents>=0.1.0",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.39.15",
    "poethepoet>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
github-agent = "agents.github_agent.__main__:app"

[tool.poe.tasks]
# GitHub agent tasks
github = "python -m agents.github_agent"
github-auth = "python -m agents.github_agent auth"
github-invoke = "python -m agents.github_agent invoke"
github-tools = "python -m agents.github_agent tools list"

# Planning agent tasks
planning = "python -m src.agents.planning_agent.runtime"

# Testing
test = "pytest tests/"
test-github = "pytest tests/agents/test_github_agent.py"
test-planning = "pytest tests/agents/test_planning_agent.py"
test-agent = "pytest"  # Usage: poe test-agent <path>

# Deployment (requires: aws_use mingfang first)
# Note: Each agent needs its specific Dockerfile copied before deployment
deploy-github = { shell = "cp Dockerfile.github Dockerfile && agentcore launch -a github_agent" }
deploy-planning = { shell = "cp Dockerfile.planning Dockerfile && agentcore launch -a planning_agent" }
deploy-jira = { shell = "cp Dockerfile.jira Dockerfile && agentcore launch -a jira_agent" }
invoke-github = "agentcore invoke -a github_agent"  # Usage: poe invoke-github '{"prompt": "..."}' --user-id "test"
invoke-planning = "agentcore invoke -a planning_agent"  # Usage: poe invoke-planning '{"prompt": "..."}' --user-id "test"
invoke-jira = "agentcore invoke -a jira_agent"  # Usage: poe invoke-jira '{"prompt": "..."}' --user-id "test"

# Development
sync = "uv sync"
sync-dev = "uv sync --all-extras"

# Debug
aws-follow = 'aws logs tail /aws/bedrock-agentcore/runtimes/runtime-08tk23FYi7-DEFAULT --log-stream-name-prefix "2025/10/08/[runtime-logs]" --follow'